--- a/index.html
+++ b/index.html
@@ -3,182 +3,177 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--FONT-AWESOME-->
+    <title>Deepika Namburi | Portfolio</title>
     <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
-    <!--MAIN CSS-->
-    <link rel="stylesheet" href="styless.css" />
-    <title>Responsive Personal Portfolio Website Design</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- HEADER DESIGN-->
-    <header class="header">
-      <a href="#" class="logo">Portfolio</a>
+    <div class="container">
+      <header>
+        <nav class="navbar">
+          <h1 class="logo">Deepika</h1>
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li>
+              <a
+                href="assets/Deepika_Resume.pdf"
+                class="resume-btn"
+                target="_blank"
+                >Resume</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-      <i class="fa-solid fa-bars" id="menu-icon"></i>
-
-      <nav class="navbar">
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
-
-    <!--HOME SECTION DESIGN-->
-    <section class="home" id="home">
-      <div class="home-content">
-        <h3>MySelf!</h3>
-        <p>
-          Hello! I'm Deepika Namburi, a passionate frontend developer and AI
-          enthusiast currently pursuing my BTech in Artificial Intelligence &
-          Data Science at Shri Vishnu Engineering College for Women.
-        </p>
-        <div class="social-media">
-          <a
-            href="https://www.linkedin.com/in/deepika-namburi-657876288/overlay/about-this-profile/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BaH0EAw45RCG%2Ft8gTbnHiOw%3D%3D"
-            target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-          <!--<a href="#"><i class="fa-brands fa-snapchat"></i></a>
-          <a href="#"><i class="fa-brands fa-telegram"></i></a>-->
-          <a href="https://github.com/Deepika-Namburi/Deepika-Namburi"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-        </div>
-        <a href="images/MyResume.pdf" class="btn">Download CV</a>
-      </div>
-      <div class="home-img">
-        <img src="images/mine.jpeg" alt="avatar" />
-      </div>
-    </section>
-    <!--ABOUT SECTION DESIGN-->
-    <section class="about" id="about">
-      <div class="about-img">
-        <img src="images/deeep.jpg" alt="My avatar image" />
-      </div>
-      <div class="about-content">
-        <h2 class="heading">About <span>Me</span></h2>
-        <h3></h3>
-        <p>
-          I have a solid foundation in software development and a keen interest
-          in building web applications. With a background in Computer Science
-          Engineering, I've developed a strong skill set in C++, Python, HTML,
-          CSS, JavaScript and Flutter. I'm also deeply interested in machine
-          learning, neural networks, and deep learning, and I love to apply
-          these technologies to solve real-world problems. I'm always excited to
-          take on new challenges and collaborate on projects that push the
-          boundaries of what's possible with technology.
-        </p>
-        <a href="#" class="btn">Read more</a>
-      </div>
-    </section>
-    <!--SERVICES SECTION DESIGN-->
-    <section class="services" id="services">
-      <h2 class="heading">My<span>Services</span></h2>
-
-      <div class="services-container">
-        <div class="services-box">
-          <i class="fa-solid fa-code"></i>
-          <h3>Web Development</h3>
-          <p>
-            I build responsive and attractive websites using HTML, CSS, and
-            JavaScript. Whether you're looking for a simple landing page or a
-            more complex web app, I can design and develop a site that fits your
-            needs and works smoothly on any device.
-          </p>
-          <a href="#" class="btn">Read More</a>
-        </div>
-      </div>
-    </section>
-    <!--PORTFOLIO SECTION DESIGN-->
-    <section class="portfolio" id="portfolio">
-      <h2 class="heading">Latest<span>Projects</span></h2>
-
-      <div class="portfolio-container">
-        <div class="portfolio-box">
-          <img src="images/Healthcare-Virtual-Assistant.png" alt="" />
-          <div class="portfolio-layer">
-            <h4>Bujji</h4>
+      <section id="hero">
+        <div class="hero-content">
+          <div class="text">
+            <h2>Hello, I'm <span>Deepika Namburi</span></h2>
             <p>
-              This is a Virtual Healthcare Voice Assistant with many medical
-              features and also works like Alexa
+              AI & Data Science Student | Full Stack Enthusiast | NASA Space
+              Apps Winner
+            </p>
+            <a href="#contact" class="btn">Let's Connect</a>
+          </div>
+          <div class="image">
+            <img src="assets/profile.jpg" alt="Deepika's Profile" />
+          </div>
+        </div>
+      </section>
+
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          I'm a highly driven student passionate about Artificial Intelligence,
+          Software Development, and impactful real-world solutions. I bring
+          experience from winning national-level competitions like NASA Space
+          Apps 2023 and volunteering with IET India.<br /><br />
+          With hands-on projects in ML, Web Dev, and automation, I love building
+          applications that solve everyday problems. I believe in continuous
+          learning, team collaboration, and pushing creative boundaries.
+        </p>
+      </section>
+
+      <section id="skills">
+        <h2>Skills</h2>
+        <ul class="skills-grid">
+          <li>C++</li>
+          <li>Python</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>Machine Learning</li>
+          <li>DSA</li>
+        </ul>
+      </section>
+
+      <section id="projects">
+        <h2>Projects</h2>
+
+        <div class="project-card">
+          <img src="assets/rideease.png" alt="RideEase App" />
+          <div>
+            <h3>RideEase</h3>
+            <p>
+              Ride-sharing platform for college students with email verification
+              and real-time updates.
+            </p>
+            <a href="https://rideeasee.netlify.app/" target="_blank"
+              >Live Demo</a
+            >
+            <a
+              href="https://github.com/Deepika-Namburi/ride_share"
+              target="_blank"
+              >GitHub</a
+            >
+          </div>
+        </div>
+
+        <div class="project-card">
+          <img src="assets/healthbot.png" alt="Virtual Health Assistant" />
+          <div>
+            <h3>Virtual Health Care Assistant</h3>
+            <p>
+              AI chatbot for general health queries, built with Python and NLP
+              libraries.
             </p>
             <a
-              href="https://github.com/Deepika-Namburi/Virtual-Health-Assisstant.git"
-              ><i class="fa-solid fa-up-right-from-square"></i
-            ></a>
+              href="https://github.com/Deepika-Namburi/Virtual-Health-Assisstant"
+              target="_blank"
+              >GitHub</a
+            >
           </div>
         </div>
 
-        <div class="portfolio-box">
-          <img src="images/mypic.png" alt="" />
-          <div class="portfolio-layer">
-            <h4>Portfolio</h4>
-            <p><u>HTML</u> <u>CSS</u> <u>JavaScript</u></p>
-            <a href="http://deepu.kesug.com/portfolio.html">
-              <i class="fa-solid fa-up-right-from-square"></i
-            ></a>
+        <div class="project-card">
+          <img src="assets/commuter.jpeg" alt="Commuter Prediction" />
+          <div>
+            <h3>Commuter Demand Prediction</h3>
+            <p>
+              Used XGBoost to forecast commuter patterns and improve transport
+              efficiency.
+            </p>
+            <a
+              href="https://github.com/Deepika-Namburi/Commuter_Demand"
+              target="_blank"
+              >GitHub</a
+            >
           </div>
         </div>
-        <div class="portfolio-box">
-          <img src="images/Screenshot 2024-08-22 133446.png" alt="" />
-          <div class="portfolio-layer">
-            <h4>Ride-Share</h4>
-            <p>A College Ride Sharing Application.</p>
-            <a href="https://github.com/Deepika-Namburi/ride_share.git">
-              <i class="fa-solid fa-up-right-from-square"></i
-            ></a>
+
+        <div class="project-card">
+          <img src="assets/portfolio.png" alt="Portfolio Project" />
+          <div>
+            <h3>Personal Portfolio</h3>
+            <p>Clean, responsive portfolio showcasing my skills and work.</p>
+            <a
+              href="https://deepika-namburi.github.io/deepikanamburi.github.io/"
+              target="_blank"
+              >Live</a
+            >
+            <a
+              href="https://github.com/Deepika-Namburi/deepikanamburi.github.io"
+              target="_blank"
+              >GitHub</a
+            >
           </div>
         </div>
-      </div>
-    </section>
-    <!--CONTACT SECTION DESIGN-->
-    <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Me</span></h2>
+      </section>
 
-      <form action="#">
-        <div class="input-box">
-          <input type="text" placeholder="Full Name" />
-          <input type="email" placeholder="Email Address" />
+      <section id="contact">
+        <h2>Contact</h2>
+        <div class="contact-links">
+          <a href="mailto:deepikavarmanamburi122@gmail.com" target="_blank"
+            >Email</a
+          >
+          <a href="https://github.com/Deepika-Namburi" target="_blank"
+            >GitHub</a
+          >
+          <a
+            href="https://www.linkedin.com/in/deepika-namburi-657876288/"
+            target="_blank"
+            >LinkedIn</a
+          >
+          <a
+            href="https://www.hackerrank.com/profile/deepunamburi122"
+            target="_blank"
+            >HackerRank</a
+          >
         </div>
+      </section>
 
-        <div class="input-box">
-          <input type="number" placeholder="Mobile Number" />
-          <input type="text" placeholder="Email Subject" />
-        </div>
-        <textarea
-          name=""
-          id=""
-          cols="30"
-          rows="10"
-          placeholder="Your Message"
-        ></textarea>
-        <input type="submit" value="Send Message" class="btn" />
-      </form>
-    </section>
-
-    <!--FOOTER DESIGN-->
-    <footer class="footer">
-      <div class="footer-text">
-        <p>Copyright &copy; 2024 by @Deepika Namburi</p>
-      </div>
-      <div class="footer-iconTop">
-        <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
-      </div>
-    </footer>
-
-    <!--scroll reveal-->
-    <script src="https://unpkg.com/scrollreveal"></script>
-
-    <!--MAIN JS-->
-
-    <script src="Main.js"></script>
+      <footer>
+        <p>© 2025 Deepika Namburi. Built with 💖</p>
+      </footer>
+    </div>
+    <script src="main.js"></script>
   </body>
 </html>
