--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#contact">Contact</a></li>
             <li>
               <a
-                href="assets/Deepika_Resume.pdf"
+                href="assets/NamburiDurgaDeepika.pdf"
                 class="resume-btn"
                 target="_blank"
                 >Resume</a
