--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
             <li>
-              <a
-                href="assets/NamburiDurgaDeepika.pdf"
-                class="resume-btn"
-                target="_blank"
-                >Resume</a
-              >
+              <a href="assets/NamburiDurgaDeepika.zip" class="resume-btn" download>Download Resume</a>
+
             </li>
           </ul>
         </nav>
