--- a/index.html
+++ b/index.html
@@ -124,7 +124,24 @@
             >
           </div>
         </div>
-
+<div class="project-card">
+          <img src="assets/bitcoindash.png" alt="Bitcoin Market Dashboard" />
+          <div>
+            <h3>Bitcoin Market Dashboard</h3>
+            <p>
+              A finance-focused interactive dashboard built using Tableau Public
+              to analyze and visualize Bitcoin's historical market performance.
+              This project explores the fluctuations in closing price, daily
+              trade volume, and highlights the top-performing days in terms of
+              value.
+            </p>
+            <a
+              href="https://public.tableau.com/views/BitcoinMarketDashboardbyDeepikaa/Dashboard1"
+              target="_blank"
+              >Tableau</a
+            >
+          </div>
+        </div>
         <div class="project-card">
           <img src="assets/portfolio.png" alt="Portfolio Project" />
           <div>
